[Rlog15] ResearchLogger option to include account name in feedback
multi-project commit with I0a293f392bd605c8203dc9a62993345ad58dcfbe

Change-Id: Ief5b940a62dbaeaecdf1c55f2ffdd1e0fdaea2b9

--- a/java/res/layout/research_feedback_fragment_layout.xml
+++ b/java/res/layout/research_feedback_fragment_layout.xml
@@ -70,6 +70,14 @@
         android:text="@string/research_feedback_include_history_label"
     />
 
+    <CheckBox
+        android:id="@+id/research_feedback_include_account_name"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_marginBottom="8dip"
+        android:checked="false"
+        android:text="@string/research_feedback_include_account_name_label"
+    />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
