Add a new option for the double-space period functionality
bug: 6934756

Change-Id: I94b2d08cac6533e96031d8e97f347e9b5fd72859

--- a/java/res/xml/prefs.xml
+++ b/java/res/xml/prefs.xml
@@ -119,6 +119,12 @@
                 android:persistent="true"
                 android:defaultValue="true" />
             <CheckBoxPreference
+                android:key="pref_key_use_double_space_period"
+                android:title="@string/use_double_space_period"
+                android:summary="@string/use_double_space_period_summary"
+                android:persistent="true"
+                android:defaultValue="true" />
+            <CheckBoxPreference
                 android:key="pref_show_language_switch_key"
                 android:title="@string/show_language_switch_key"
                 android:summary="@string/show_language_switch_key_summary"
