Fix label of switch to symbols key when symbols has shortcut key
This change fixes the labels of switch to symbols key and switch back
from more symbols key when symbols layout has shortcut key.

Change-Id: I3fbbef2d929486d0f0542f4d89cb086d9f5bad82

--- a/java/res/values/attrs.xml
+++ b/java/res/values/attrs.xml
@@ -389,6 +389,7 @@
         <attr name="passwordInput" format="boolean" />
         <attr name="clobberSettingsKey" format="boolean" />
         <attr name="shortcutKeyEnabled" format="boolean" />
+        <attr name="shortcutKeyOnSymbols" format="boolean" />
         <attr name="hasShortcutKey" format="boolean" />
         <attr name="languageSwitchKeyEnabled" format="boolean" />
         <attr name="isMultiLine" format="boolean" />
