--- a/java/res/xml/key_styles_common.xml
+++ b/java/res/xml/key_styles_common.xml
@@ -134,52 +134,50 @@
         latin:code="!code/key_tab"
         latin:keyIcon="!icon/tab_key"
         latin:keyIconPreview="!icon/tab_key_preview" />
+    <key-style
+        latin:styleName="baseForLayoutSwitchKeyStyle"
+        latin:keyLabelFlags="preserveCase"
+        latin:keyActionFlags="noKeyPreview"
+        latin:backgroundType="functional" />
     <switch>
         <!-- When this qwerty keyboard has no shortcut keys but shortcut key is enabled, then symbol
              keyboard will have a shortcut key. That means we should use label_to_symbol_key label
              and shortcut_for_label icon. -->
         <case
-            latin:shortcutKeyEnabled="true"
-            latin:hasShortcutKey="false"
+            latin:shortcutKeyOnSymbols="true"
         >
             <key-style
-                latin:styleName="toSymbolKeyStyle"
-                latin:code="!code/key_switch_alpha_symbol"
+                latin:styleName="baseForToSymbolKeyStyle"
                 latin:keyIcon="!icon/shortcut_for_label"
                 latin:keyLabel="!text/label_to_symbol_with_microphone_key"
                 latin:keyLabelFlags="withIconRight|preserveCase"
-                latin:keyActionFlags="noKeyPreview"
-                latin:backgroundType="functional" />
+                latin:parentStyle="baseForLayoutSwitchKeyStyle" />
         </case>
         <default>
             <key-style
-                latin:styleName="toSymbolKeyStyle"
-                latin:code="!code/key_switch_alpha_symbol"
+                latin:styleName="baseForToSymbolKeyStyle"
                 latin:keyLabel="!text/label_to_symbol_key"
-                latin:keyLabelFlags="preserveCase"
-                latin:keyActionFlags="noKeyPreview"
-                latin:backgroundType="functional" />
+                latin:parentStyle="baseForLayoutSwitchKeyStyle" />
         </default>
     </switch>
+    <key-style
+        latin:styleName="toSymbolKeyStyle"
+        latin:code="!code/key_switch_alpha_symbol"
+        latin:parentStyle="baseForToSymbolKeyStyle" />
     <key-style
         latin:styleName="toAlphaKeyStyle"
         latin:code="!code/key_switch_alpha_symbol"
         latin:keyLabel="!text/label_to_alpha_key"
-        latin:keyLabelFlags="preserveCase"
-        latin:keyActionFlags="noKeyPreview"
-        latin:backgroundType="functional" />
+        latin:parentStyle="baseForLayoutSwitchKeyStyle" />
     <key-style
         latin:styleName="toMoreSymbolKeyStyle"
         latin:code="!code/key_shift"
         latin:keyLabel="!text/label_to_more_symbol_key"
-        latin:keyActionFlags="noKeyPreview"
-        latin:backgroundType="functional" />
+        latin:parentStyle="baseForLayoutSwitchKeyStyle" />
     <key-style
         latin:styleName="backFromMoreSymbolKeyStyle"
         latin:code="!code/key_shift"
-        latin:keyLabel="!text/label_to_symbol_key"
-        latin:keyActionFlags="noKeyPreview"
-        latin:backgroundType="functional" />
+        latin:parentStyle="baseForToSymbolKeyStyle" />
     <key-style
         latin:styleName="punctuationKeyStyle"
         latin:keyLabel="."
