Fix layout switch keys' label of no language subtype keyboard
This change moves the following string from resources to
KeyboardTextsSet.
- label_to_alpha_key
- label_to_symbols_key
- label_to_symbols_with_microphone_key

Bug: 7697799
Change-Id: Icf9b8848de4c70f792e336f2ae274dab12be79ee

--- a/tools/maketext/res/values-be/donottranslate-more-keys.xml
+++ b/tools/maketext/res/values-be/donottranslate-more-keys.xml
@@ -32,4 +32,9 @@
     <string name="more_keys_for_cyrillic_ie">&#x0451;</string>
     <!-- U+044A: "ъ" CYRILLIC SMALL LETTER HARD SIGN -->
     <string name="more_keys_for_cyrillic_soft_sign">&#x044A;</string>
+    <!-- Label for "switch to alphabetic" key.
+         U+0410: "А" CYRILLIC CAPITAL LETTER A
+         U+0411: "Б" CYRILLIC CAPITAL LETTER BE
+         U+0412: "В" CYRILLIC CAPITAL LETTER VE -->
+    <string name="label_to_alpha_key">&#x0410;&#x0411;&#x0412;</string>
 </resources>
