--- a/tools/maketext/res/values-ar/donottranslate-more-keys.xml
+++ b/tools/maketext/res/values-ar/donottranslate-more-keys.xml
@@ -18,6 +18,12 @@
 */
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <!-- Label for "switch to alphabetic" key.
+         U+0623: "ا" ARABIC LETTER ALEF
+         U+200C: ZERO WIDTH NON-JOINER
+         U+0628: "ب" ARABIC LETTER BEH
+         U+062C: "پ" ARABIC LETTER PEH -->
+    <string name="label_to_alpha_key">&#x0623;&#x200C;&#x0628;&#x200C;&#x062C;</string>
     <!-- U+0661: "١" ARABIC-INDIC DIGIT ONE -->
     <string name="keylabel_for_symbols_1">&#x0661;</string>
     <!-- U+0662: "٢" ARABIC-INDIC DIGIT TWO -->
@@ -38,6 +44,12 @@
     <string name="keylabel_for_symbols_9">&#x0669;</string>
     <!-- U+0660: "٠" ARABIC-INDIC DIGIT ZERO -->
     <string name="keylabel_for_symbols_0">&#x0660;</string>
+    <!-- Label for "switch to symbols" key.
+         U+061F: "؟" ARABIC QUESTION MARK -->
+    <string name="label_to_symbol_key">&#x0663;&#x0662;&#x0661;&#x061F;</string>
+    <!-- Label for "switch to symbols with microphone" key. This string shouldn't include the "mic"
+         part because it'll be appended by the code. -->
+    <string name="label_to_symbol_with_microphone_key">&#x0663;&#x0662;&#x0661;</string>
     <string name="additional_more_keys_for_symbols_1">1</string>
     <string name="additional_more_keys_for_symbols_2">2</string>
     <string name="additional_more_keys_for_symbols_3">3</string>
