Set default audio and haptic feedback settings
- Default keypress volume is set to 0.2f in resource.
- Default keypress vibration duration is set to 10 msec in resource.

Bug: 7055329
Change-Id: I83bd6288d171d9787d52e2b02e4e5305f1435681

--- a/java/res/values/keyboard-heights.xml
+++ b/java/res/values/keyboard-heights.xml
@@ -33,5 +33,7 @@
     <!-- Preferable keyboard height in absolute scale: 48.0mm -->
         <!-- Xoom -->
         <item>stingray,283.1337</item>
+    <!-- Default value for unknown device: empty string -->
+        <item>DEFAULT,</item>
     </string-array>
 </resources>
